[package]
name = "rsde_ffi_derive"
version = "0.0.1"
authors = ["LemonHX"]
license = "MPL-2.0"
edition = "2018"
publish = false

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
syn = { workspace = true }
synstructure = { workspace = true }
quote = { workspace = true }

